[tool.poetry]
name = "mdfcolumnify"
version = "0.1.0"
description = ""
authors = ["yoonjinh <yoonjinh@3secondz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.6.0"
asammdf = "6.4.4"
fastparquet = "^0.7.2"
tables = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
