[tool.poetry]
name = "mdfcolumnify"
version = "0.1.1"
description = ""
authors = ["yoonjinh <yoonjinh@3secondz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.6.0"
asammdf = "6.4.4"
tables = "^3.7.0"
pyarrow = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
